# ccraft

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
libs/glad/: glad.c  glad.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: camera.frag  camera.vert  shader.frag  shader.vert
src/: block.c  block.h  camera.h  chunk.c  chunk.h  cube.h  debug.c  debug.h  entity.c  entity.h  filepath.h  frustum.h  game.c  game.h  input.c  input.h  inventory.c  inventory.h  light_queue.c  light_queue.h  main.c  perlin.h  player.c  player.h  render_context.h  shader.c  shader.h  texture.c  texture.h  world.c  world.h
